﻿IMPROVEMENTS / FIXES
- General:
	- Blacklist the PotatoRoid due to it not having a valid prefab (they get procedurally generated) and causing NREs.
	- Add try-catch around setting the gear action group due to the FSM sometimes breaking it and breaking pilot initialisation.
- UI:
	- Add a keybind for targeting the next GPS target.

v1.5.8.0
IMPROVEMENTS / FIXES
- General:
	- Fix Firebottle mass not resetting if a part switched from fueltank to structural.
- UI:
	- Fix layout of vessel switcher window buttons and version label.
	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
	- Updated German localisation from EzBro.
	- Fix some AI GUI infotext.
	- Clean up ordering and consistency in the AI GUI and in-flight WM windows.
- Competition:
	- Tweaks to sequenced competition start-up to allow a single plane to perform the sequence despite not having enough teams for a competition.
	- Add an option to save the image from plot_summary.py with a transparent background.
- AI / WM:
	- Fix max collision avoidance strength in AI GUI.
	- Fix NRE when adjusting autotuning fields in the SPH.
	- AI will no longer dive into missiles approaching from directly below.
	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
	- Add a keybind for arming/disarming the WM.
- Detectors
	- Fix radars/IRSTs with ability to detect/lock targets with a signature of 0 not being able to detect/lock targets with a signature of 0.
	- Fix a division by zero in the standoff jamming effect calculation when the radar signature is 0.
- Weapons:
	- Fix bug in nuke impulse calculation and some NREs.
	- Fix turrets on non-active vessels following the mouse unless Remote Firing enabled.
	- Fix missiles fired from reloadable rails resetting missile settings on Launch/Spawn.