@@ -262,6 +262,7 @@ namespace BDArmory.Damage
         {
             if (part != null)
             {
+                ArmorRemaining = 100;
                 var maxHitPoints_ = CalculateTotalHitpoints();
 
                 if (!_forceUpdateHitpointsUI && previousHitpoints == maxHitPoints_) return;
@@ -282,7 +283,6 @@ namespace BDArmory.Damage
                     Fields["Hitpoints"].guiActiveEditor = false;
                 }
                 Hitpoints = maxHitPoints_;
-                ArmorRemaining = 100;
                 if (!ArmorSet) overrideArmorSetFromConfig();
 
                 previousHitpoints = maxHitPoints_;
@@ -984,16 +984,14 @@ namespace BDArmory.Damage
                             var scale = (BDArmorySettings.HP_THRESHOLD >= 100 ? BDArmorySettings.HP_THRESHOLD : 2000f) / (Mathf.Exp(1) - 1);
                             hitpoints = Mathf.Min(hitpoints, (BDArmorySettings.HP_THRESHOLD >= 100 ? BDArmorySettings.HP_THRESHOLD : 2000f) * Mathf.Log(hitpoints / scale + 1)); //use default of 2K for RP if slider set to unclamped
                         }
-                        hitpoints *= HullInfo.materials[hullType].healthMod;
-                        hitpoints = Mathf.Round(hitpoints / HpRounding) * HpRounding;
+                        hitpoints = BDAMath.RoundToUnit(hitpoints, HpRounding);
                         if (hitpoints < 100) hitpoints = 100;
+                        hitpoints *= HullInfo.materials[hullType].healthMod; // Apply health mod after rounding and lower limit.
                         if (BDArmorySettings.DEBUG_ARMOR && maxHitPoints <= 0 && Hitpoints != hitpoints) Debug.Log($"[BDArmory.HitpointTracker]: {part.name} updated HP: {Hitpoints}->{hitpoints} at time {Time.time}, partMass: {partMass}, density: {density}, structuralVolume: {structuralVolume}, structuralMass {structuralMass}");
                     }
                     else // Override based on part configuration for custom parts
                     {
                         hitpoints = maxHitPoints * HullInfo.materials[hullType].healthMod;
-                        hitpoints = Mathf.Round(hitpoints / HpRounding) * HpRounding;
-                        if (hitpoints < 100) hitpoints = 100;
                         if (BDArmorySettings.DEBUG_ARMOR && maxHitPoints <= 0 && Hitpoints != hitpoints) Debug.Log($"[BDArmory.HitpointTracker]: {part.name} updated HP: {Hitpoints}->{hitpoints} at time {Time.time}");
                     }
                 }
@@ -1003,7 +1001,6 @@ namespace BDArmory.Damage
                                                 //hitpoints = Mathf.Round(hitpoints / HpRounding) * HpRounding;
                                                 //armorpanel HP is panel integrity, as 'HP' is the slab of armor; having a secondary unused HP pool will only make armor massively more effective against explosions than it should due to how isInLineOfSight calculates intermediate parts
                 }
-                if (hitpoints < 100) hitpoints = 100;
             }
             else
             {
