@@ -2,6 +2,7 @@
 - General:
 	- Blacklist the PotatoRoid due to it not having a valid prefab (they get procedurally generated) and causing NREs.
 	- Add try-catch around setting the gear action group due to the FSM sometimes breaking it and breaking pilot initialisation.
+	- Remove HP rounding and lower HP limit for MM-patched parts. Apply health modifier after applying rounding and lower HP limit for non-MM-patched parts.
 - UI:
 	- Add a keybind for targeting the next GPS target.
 
